elearning-ops/helm/static/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard

spec:
  rules:
    - host: dash.doorward.tech
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
            path: /


  tls:
  - hosts:
    - dash.doorward.tech
    secretName: dash.doorward.tech
